manifest.yaml
---
# Source: apache-server/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-server
  namespace: core
  annotations: 
  labels:
    app: apache-server
    group: core   
spec:
  sessionAffinity: None
  selector:
    app: apache-server
    group: core    
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
---
# Source: apache-server/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-server
  namespace: core
  labels:
    app: apache-server
    group: core 
spec:
  selector:
    matchLabels:
      app: apache-server
      group: core  
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 25%       
  replicas: corereplicacount
  template:
    metadata:  
      annotations:      
        deployment-timestamp: "20240206131616"        
      labels:
        app: apache-server
        group: core           
    spec:     
      securityContext:
        runAsNonRoot: false
        runAsUser: 0
      volumes:
      - configMap:
          name: apache-configs
        name: apache-configs
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              topologyKey: "failure-domain.beta.kubernetes.io/zone"
              labelSelector:
                matchLabels:
                  app: apache-server
                  group: core    
      imagePullSecrets:
        - name: oneshield-registry          
      containers:      
        - name: apache-server
          image: "osdevops/core7:httpd_BI7_1507_1"
          imagePullPolicy: Always             
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
            - name: https
              containerPort: 443
              protocol: TCP
          lifecycle:
            preStop:
              exec:
                command:
                - sh
                - -c
                - sleep 10    
          volumeMounts:
          - mountPath: /etc/httpd/conf/httpd.oneshield.conf
            name: apache-configs
            subPath: httpd.oneshield.conf  
          resources:
            limits:
              cpu: 1000m
              memory: 2Gi
            requests:
              cpu: 500m
              memory: 1Gi
---
# Source: apache-server/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apache-server
  namespace: core  
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "server: hide";
      more_set_headers "X-Content-Type-Options: nosniff";
      more_set_headers "X-Frame-Options: SAMEORIGIN";
      more_set_headers "X-Xss-Protection: 1";
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/forec-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/session-cookie-name: stickounet
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"   
  labels:
    app: apache-server
    group: core  
spec:
  rules:  
  - host: core.domain.com 
    http:
      paths:
      - backend:          
          service:
            name: apache-server 
            port:
              number: 443            
        path: /
        pathType: ImplementationSpecific
  # TLS terminated At AWS loadbalanacer with ACM this line requires only tls terminated in cluster using as secrets
  # tls:
  # - hosts: 
  #   - core.domain.com
  #   secretName: osco-tls-prod
